--- a/css/style.css
+++ b/css/style.css
@@ -202,28 +202,28 @@ html  {
  }
  .button  {
     width:  100%;
-     height:  80px;
-     background:  #ff5e5e;
-     color:  #fff;
-     line-height:  80px;
-     font-size:  1.5rem;
-     border-radius:  0px;
-     transition: .5s;
-     margin-bottom:  0px;
+    height:  60px;
+    background:  #ff5e5e;
+    color:  #fff;
+    line-height:  60px;
+    font-size:  1.5rem;
+    border-radius:  0px;
+    transition: .5s;
+    margin-bottom:  0px;
+    bottom: 0px;
+    position: absolute;
+    border-bottom:  8px solid #914e4e;
  }
  .button:hover  {
-    transform:  translateY(10px);
- }
- .button-bottom  {
-    border-bottom:  10px solid #914e4e;
+    transform:  translateY(8px);
  }
  .contact.row  {
     margin-top:  60px;
-     height:  200px;
-     background:  #feb301;
-     border:  0px;
-     font-family:  'Muli',  sans-serif;
-     color:  #5b4000 }
+    height:  200px;
+    background:  #feb301;
+    border:  0px;
+    font-family:  'Muli',  sans-serif;
+    color:  #5b4000 }
  .contact h3  {
     padding-top:  40px;
  }
