--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,13 @@ html  {
  }
  .move  {
     background:  #fff;
-     margin-top:  100vh;
-     z-index:  1;
-     font-family:  'Raleway'}
+    margin-top:  100vh;
+    z-index:  1;
+    font-family:  'Raleway'
+}
+#main {
+    padding-bottom: 80px;
+}
  .row h5,  .row h3  {
     padding-top:  4em;
      text-align:  center;
@@ -181,9 +185,14 @@ html  {
      overflow:  hidden;
      position:  relative;
      margin-bottom:  30px;
-     -webkit-box-shadow:  0px 4px 4px 0px rgba(44,  62,  80, .5);
-     -moz-box-shadow:     0px 4px 4px 0px rgba(44,  62,  80, .5);
-     box-shadow:          0px 4px 4px 0px rgba(44,  62,  80, .5);
+     -webkit-box-shadow:  0px 1px 4px 2px rgba(44,  62,  80, .5);
+     -moz-box-shadow:     0px 1px 4px 2px rgba(44,  62,  80, .5);
+     box-shadow:          0px 1px 4px 2px rgba(44,  62,  80, .5);
+ }
+ .workbox1 {
+     background: url("http://i.imgur.com/LnYi4rX.png");
+     background-size:  cover;
+     background-position:  bottom;
  }
  .hoverUp  {
     color:  #fff;
@@ -218,7 +227,7 @@ html  {
     transform:  translateY(8px);
  }
  .contact.row  {
-    margin-top:  60px;
+    margin-top:  0px;
     height:  200px;
     background:  #feb301;
     border:  0px;
