--- a/css/style.css
+++ b/css/style.css
@@ -190,10 +190,20 @@ html  {
      box-shadow:          0px 1px 4px 2px rgba(44,  62,  80, .5);
  }
  .workbox1 {
+     background: url("http://i.imgur.com/tEPBKKn.png");
+     background-size:  cover;
+     background-position:  bottom;
+ }
+ .workbox2 {
      background: url("http://i.imgur.com/LnYi4rX.png");
      background-size:  cover;
      background-position:  bottom;
  }
+ /*.workbox3 {
+     background: url("http://i.imgur.com/LnYi4rX.png");
+     background-size:  cover;
+     background-position:  bottom;
+ }*/
  .hoverUp  {
     color:  #fff;
      width:  100%;
